--- a/index.css
+++ b/index.css
@@ -156,7 +156,8 @@
   margin-top: 5%;
   margin-left: 2.5%;
   display: inline-block;
-  max-height: 100%;
+  position: relative;
+  height: 50%;
   font-family: Avenir;
 }
 .SingleProject:hover {
@@ -165,8 +166,9 @@
 
 .ProjectImage {
   width: 100%;
-  height: 70%;
+  height: auto;
   margin: 10px auto;
+  
 }
 .ProjectName {
   text-align: center;
@@ -177,11 +179,17 @@
 }
 
 .ImageResize {
-  width: calc(100% - 20px);
-  height: auto;
-  vertical-align: middle;
+  position:relative;
+  max-width: 90%;
+  height: 300px;
   border: 10px solid #e5eae9;
   border-radius: 5px;
+  object-fit: contain;
+  background-color: black;
+  display:block;
+  align-items: center;
+  margin-left:auto;
+  margin-right: auto;
 }
 .ImageResizeTaller {
   position: relative;
@@ -260,8 +268,12 @@
   font-size: 50px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
-  color: white;
+  color:white;
+  -webkit-text-fill-color: black; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color:white;
   text-align: center;
+  
 }
 .NextArrow {
   cursor: pointer;
@@ -273,7 +285,10 @@
   font-size: 50px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
-  color: white;
+  color:white;
+  -webkit-text-fill-color: black; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color:white;
   text-align: center;
   background-color: transparent;
   border: none;
